# bilby-yaml

./: .gitignore  README.md  README.rst  bilby_yaml.py  pyproject.toml
.github/workflows/: python-app.yml
examples/: 15d_gaussian.yaml  bbh.prior  bbh.yml  gaussian.yaml  linear_regression.yaml  multivariate_gaussian.yaml  sine_gaussian.yaml
